# REAPjobSizingTool

./: README.md  package-lock.json  package.json
src/: App.css  App.js  JobSizingCalculator.js
src-tauri/: Cargo.toml  tauri.conf.json
