[package]
name = "reapjobsizingtool"
version = "0.1.0"
description = "A cross-platform desktop app for job sizing."
authors = Louisa Murray
repository = "https://github.com/louisamurray/reapjobsizingtool"
edition = "2024"
rust-version = "1.77.2"

# Optional additional metadata
keywords = ["Tauri", "desktop app", "job sizing", "cross-platform"]
categories = ["desktop-app", "productivity"]
readme = "README.md"

[lib]
name = "reapjobsizingtool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = [] }
tauri-plugin-log = "2.0.0-rc"